--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Octocat's homepage
+title: myTest
 description: Bookmark this to keep an eye on my project updates!
