--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: myTest
-description: Bookmark this to keep an eye on my project updates!
+description: hhh hhh hhh hhh hhh hhh hhh !
